[gd_scene load_steps=15 format=2]

[ext_resource path="res://Juego/Escudo/Shield.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Jugador/AnimacionesPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Buques/NaveBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Jugador/Engine/SFX_Engine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Jugador/CamaraJugador.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Efectos/Estelas/TrailStartingPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Proyectiles/BeamLaser/LaserBeam2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Jugador/MaterialesFisicosJugador.tres" type="PhysicsMaterial" id=8]
[ext_resource path="res://Juego/Jugador/NaveJugador.png" type="Texture" id=9]
[ext_resource path="res://Juego/Jugador/Jugador.gd" type="Script" id=10]
[ext_resource path="res://Juego/Proyectiles/PlayerLaser.tscn" type="PackedScene" id=11]
[ext_resource path="res://Juego/Proyectiles/PlayerLaserAntiEscudos.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.309804, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.301961, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="Jugador" instance=ExtResource( 3 )]
z_index = 90
z_as_relative = false
collision_layer = 2
collision_mask = 236
physics_material_override = ExtResource( 8 )
contacts_reported = 4
contact_monitor = true
can_sleep = false
linear_damp = 2.5
angular_damp = 2.8
script = ExtResource( 10 )
vel_movimiento = 65
vel_rotacion = 360

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" parent="." index="1"]
polygon = PoolVector2Array( -59, 1.99979, -32.9999, -27.5001, 32.5001, -28.9999, 61, 2.50022, 37, 7.50013, 32.9999, 27.5001, -31.5001, 25.9999, -37, 9.49987 )

[node name="NormalWeapon" parent="." index="2"]
proyectile = ExtResource( 11 )
proyectile_velocity = 2200

[node name="LeftMuzzle" parent="NormalWeapon" index="0"]
position = Vector2( 36.7547, 28.6862 )

[node name="RightMuzzle" parent="NormalWeapon" index="1"]
position = Vector2( 36.7547, -28.5 )

[node name="LaserBeam2D" parent="." index="3" instance=ExtResource( 7 )]
position = Vector2( 42, 0 )

[node name="Shield" parent="." index="4" instance=ExtResource( 1 )]

[node name="TrailStartingPoint" parent="." index="5" instance=ExtResource( 6 )]

[node name="TrailStartingPoint2" parent="." index="6" instance=ExtResource( 6 )]
position = Vector2( -29.9352, 24.6016 )

[node name="WeaponAntiEscudos" parent="." index="7"]
proyectile = ExtResource( 13 )
fire_rate = 0.8
proyectile_velocity = 1800

[node name="LeftMuzzle" parent="WeaponAntiEscudos" index="0"]
position = Vector2( 32, 14 )

[node name="RightMuzzle" parent="WeaponAntiEscudos" index="1"]
position = Vector2( 32, -14 )

[node name="SFX_Engine" parent="." index="8" instance=ExtResource( 4 )]

[node name="AnimationPlayer" parent="." index="9" instance=ExtResource( 2 )]

[node name="CamaraJugador" parent="." index="10" instance=ExtResource( 5 )]

[node name="BarraHitPoints" parent="." index="12"]
margin_left = -95.1241
margin_top = 52.9167
margin_right = -25.1241
margin_bottom = 62.9167
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="NormalWeapon"]
[editable path="WeaponAntiEscudos"]
